metadataPackage_1602884205764/objects/LossCause__c.object
<CustomObject>
    <label>Loss Cause</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loss Causes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_EN_CA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L_EN_CA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L_FR_CA__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>L_FR_CA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Retired__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Retired</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeCode__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>TypeCode</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>